<resources>

    <!--Fonts-->
    <string name="bold">montserrat_bold.ttf</string>
    <string name="regular">montserrat_regular.ttf</string>
    <string name="semibold">montserrat_semibold.ttf</string>
    <string name="medium">montserrat_medium.ttf</string>
    <string name="black">montserrat_black.ttf</string>


    <!--FACEBOOK-->
    <string name="facebook_app_id">442875959979149</string>
    <string name="fb_login_protocol_scheme">fb442875959979149</string>


    <!--Google Keys-->
    <string name="map_key">AIzaSyCWiIA70pJEDtggj9p27lFs7nbrpNz_x0A</string>

    <!--strings-->
    <string name="app_name">RYDZ</string>
    <string name="numberverifytext">Number?</string>
    <string name="enter_email">Enter your email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="server_not_found">Server not found.</string>
    <string name="server_broken">Server broken.</string>
    <string name="error_unknown">Unknown error.</string>
    <string name="error">Error Occurred</string>
    <string name="forgot_pwd">Forgot Password ?</string>
    <string name="logout_msg">Are you sure you want to signout?</string>
    <string name="firstname_validation">First name is required</string>
    <string name="lastname_validation">Last name is required</string>
    <string name="email_validation">Please enter valid email</string>
    <string name="pwd_validation">Password is required</string>
    <string name="address_validation">Address is required</string>
    <string name="email_req_validation">Email Id is required</string>
    <string name="phone_validation">Phone number is required</string>
    <string name="oldpwd_validation">Current password is required</string>
    <string name="contact_validation">Please enter correct number.</string>
    <string name="strongpwd_validation">Please set password of atleast 8 characters.</string>
    <string name="newpwd_validation">Please enter new password of atleast 8 characters.</string>
    <string name="confirmpwd_validation">Please enter confirm password of atleast 8 characters.</string>
    <string name="matchpwd_validation">New and Confirm password should match</string>
    <string name="otp_validation">Please enter valid Otp</string>
    <string name="destination_hint">Where to?</string>
    <string name="enteryour">Shhh... Enter your</string>
    <string name="hint_password">Password</string>
    <string name="Let_us_know_your">Let us know your</string>
    <string name="name">name.</string>
    <string name="let_us_have_your">let us have your</string>
    <string name="email">email.</string>
    <string name="email_example">name@example.com</string>
    <string name="lets_verify">Lets verify your</string>
    <string name="verifynumber">number.</string>
    <string name="enter_otp">Enter the 4 - digit code sent to you at</string>
    <string name="or">Or</string>
    <string name="continue_text">Or continue with </string>
    <string name="login_with_email">Email</string>
    <string name="yourtrips">Your Trips</string>
    <string name="payments">Payment</string>
    <string name="rewards">Rewards</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="first_name_title">First Name</string>
    <string name="last_name_title">Last Name</string>
    <string name="phone_number_title">Phone Number</string>
    <string name="email_title">Email Address</string>
    <string name="password_title">Password</string>
    <string name="header_title">Edit Email</string>
    <string name="edit_email">Edit Email</string>
    <string name="editName">Edit Name</string>
    <string name="changePassword">Change Password </string>
    <string name="changeNumber">Change Number </string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="your_last_trip">Your Last Trip</string>
    <string name="report_an_issue_with_this_trip">Report an issue with this trip</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="whereto">Where to ?</string>
    <string name="source_hint">Enter your Pickup</string>
    <string name="dropoff">Drop-off</string>
    <string name="sign_out">Sign out</string>
    <string name="confirm">Confirm</string>
    <string name="finding_ride">Finding Nearest Ride</string>
    <string name="cancel_req">Cancel request</string>
    <string name="contact">Contact</string>
    <string name="price_range">Price Range</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="current_trip">Your current trip </string>
    <string name="share_status">Share Status</string>\
    <string name="payment_method">Payment Methods</string>
    <string name="add_payment_method">Add credit or debit card</string>
    <string name="promotions">Promotions</string>
    <string name="add_promo_gift_code">Add Promo code</string>
    <string name="add_payment">Add Payment</string>
    <string name="add">Add</string>
    <string name="promotext">Your promo/gift code</string>
    <string name="enter_promocode">Enter your promo code</string>
    <string name="addreview">Enter your feedback</string>
    <string name="you_rated">You rated</string>
    <string name="canceled">Cancelled</string>
    <string name="cancel">Cancel</string>
    <string name="receipt">Receipt</string>
    <string name="tripFare">Trip Fare</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="confirm_info">Confirm your Information</string>
    <string name="booking_notifications">Booking Notifications</string>
    <string name="broadcast_notifications">Broadcast Notifications</string>
    <string name="details">Details</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="resendcode">Resend Code</string>
    <string name="diff_number">Please enter different number</string>
    <string name="completed"> Completed</string>
    <string name="chat"> Chat</string>
    <string name="message_should_not_empty">Message should not be empty.</string>
    <string name="message_hint">Enter your message</string>
    <string name="your_rewards_points">Your Reward Points</string>
    <string name="redeem">Redeem</string>
    <string name="points">$ 0</string>
    <string name="errorString">Something went wrong, Please try again.</string>
    <string name="nodata_error">No data found.</string>
    <string name="submit_feedback">Submit  Feedback</string>
    <string name="support">Help</string>
    <string name="enter_your_issue">Enter your Issue</string>
    <string name="describe_your_issue">Describe your issue</string>
    <string name="about">About</string>
    <string name="faq">FAQ</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="wallet">Wallet</string>
    <string name="you_have_new_message">You have a new message</string>
    <string name="setpin"> or choose the location manually from the map</string>
    <string name="confirmPickup">Confirm Pickup</string>
    <string name="confirmDes">Confirm Destination</string>
    <string name="setpassword">Set Password</string>
    <string name="pickup">Pickup</string>
    <string name="done">Done</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="enter_your">Enter your</string>
    <string name="choose_an_account">Choose an account</string>
    <string name="social_login_message">By clicking on a social options you may receive an sms for verification. Message and data rates may apply.</string>
    <string name="rate_your_driver">Rate your driver</string>
    <string name="already_login">Your account has been logged into another device. Please check with Admin if it\'s not you.</string>
    <string name="remember_me">Remember Me</string>
    <string name="no_points">Oops! You have no points to redeem</string>
    <string name="contact_us">Contact us</string>
    <string name="disable_broadcast_notification">Are you sure you want to disable broadcast notifications?</string>
    <string name="disable_booking_notification">Are you sure you want to disable booking notifications?</string>
    <string name="exitApp">Do you want to exit from app?</string>
    <string name="schedule_cancelled">Your schedule ride process is cancelled</string>
    <string name="slect_source">Please select source location first....</string>
    <string name="past">Past</string>
    <string name="upcoming">Upcoming</string>
    <string name="ride_cancelled">Ride Cancelled Successfully</string>
    <string name="meet_driver">Meet Driver Now</string>
    <string name="loading">Loading...</string>
    <string name="enter_promo">Please enter your promocode</string>
    <string name="promo_applied">Promo code applied.</string>
    <string name="str_wrong">Something went wrong</string>
    <string name="ok">Ok</string>
    <string name="social">Social</string>
    <string name="login_email">Login with email</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="enter_your_drop_off">Enter your Drop-off</string>
    <string name="cash">Cash</string>
    <string name="str_name">Name</string>
    <string name="add_notes">Add notes</string>
    <string name="schedule_a_ride">Schedule a Ride</string>
    <string name="validation_timeslot">Please make sure time slot you select must be after the current time.</string>
    <string name="check_internet">Please Check Your Internet Connection</string>
    <string name="fare_summary">Fare Summary</string>
    <string name="profile_setup">Profile Setup</string>
    <string name="terms_conditions">Please accept GDPR consent, Terms &amp; Condition &amp; Privacy Policy</string>
    <string name="string_terms">By clicking, I have read, accept and understand the RYDZ’s Terms and Conditions and Privacy Policy.(*Required)</string>
    <string name="by_clicking_i_would_like_to_receive_updates_n_on_the_latest_news_and_promos">By clicking, I would like to receive updates\non the latest news and promos.</string>
    <string name="by_clicking_i_agree_to_let_rydz_store_the_information_i_provide_in_order_to_provide_and_improve_its_services_you_may_delete_your_account_at_anytime">By clicking, I agree to let RYDZ store the \ninformation I provide in order to provide \nand improve its services. You may delete\n your account at anytime.(*Required)</string>
    <string name="by_clicking_i_have_read_accept_and_understand_the_rydz_s_terms_and_conditions_and_privacy_policy">By clicking, I have read, accept and \n understand the RYDZ’s Terms and \nConditions and Privacy Policy.</string>
    <string name="due_to_the_current_covid_pandemic_we_highly_recommend_you_wear_a_face_mask_to_protect_yourself_and_others">Due to the current Covid pandemic, you are \nrequired to wear a face mask to protect\n yourself and others.</string>
    <string name="hint_company">Company(Optional)</string>
    <string name="delete">Delete</string>
    <string name="mark_as_default">Mark as default</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_money_to_wallet">Add Money To Wallet</string>
    <string name="proceed_to_add_money">Proceed To Add Money</string>
    <string name="amount">$ Amount</string>
    <string name="refund">Refund</string>
    <string name="drive_for_rydz">Drive for RYDZ</string>

</resources>
