<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        >

        <item
        android:id="@+id/nav_promoCode"
        android:icon="@drawable/label"
        android:title="@string/rewards"/>

        <item
            android:id="@+id/nav_yourtrips"
            android:icon="@drawable/history"
            android:title="@string/yourtrips"/>
        <item
            android:id="@+id/nav_payments"
            android:icon="@drawable/cards"
            android:title="@string/payments"
            />
  <item
            android:id="@+id/nav_drive"
            android:icon="@drawable/ic_driver"
            android:title="@string/drive_for_rydz"
            />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/info"
            android:title="@string/support"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/setting"
            android:title="@string/settings"/>
    </group>


</menu>
