<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/transparent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_whitecorner">

        <TextView
            android:id="@+id/tv_dialogtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/logout_msg"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_15sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_dialogtext"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal"
            android:weightSum="2.2">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_weight="1.0"
                android:background="@color/colorDisableText"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12sdp"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_weight="0.2"
                android:background="@color/colorWhite" />

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_weight="1.0"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12sdp"
                 />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>