<RelativeLayout
    android:id="@+id/topLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingTop="@dimen/_5sdp"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <include layout="@layout/header_back_onregister"></include>

    <cabuser.com.rydz.util.common.CustomFontTextView
        android:id="@+id/tv_haveYour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cl_headermain"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/let_us_have_your"
       android:textColor="@color/colorWhite"
        android:textSize="@dimen/normal_text_size" />

    <cabuser.com.rydz.util.common.CustomFontTextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_haveYour"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/email"
       android:textColor="@color/colorWhite"
        android:textSize="@dimen/bold_text_size"
        app:fontName="bold" />

    <cabuser.com.rydz.util.common.CustomFontEditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:ellipsize="end"
        android:hint="@string/email_example"
        android:textAlignment="center"
        android:backgroundTint="@color/colorWhite"
        android:paddingBottom="@dimen/_10sdp"
       android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textSize="@dimen/normal_text_size"/>


    <ImageView
        android:id="@+id/fab_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/view"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:onClick="onClick"
        android:src="@drawable/iv_nextarrow"
        android:visibility="visible"

        app:fabSize="normal" />

</RelativeLayout>